Lib/AlternateWrapper/NaroOccCore/NaroOccCore-build-desktop/Occ/Visual3d/Visual3dView.cs

		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_ViewMappingReset(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_ViewOrientationReset(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_SetAnimationModeOff(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_ZBufferTriedronSetup9BCB825E(IntPtr instance, int XColor,int YColor,int ZColor,double SizeRatio,double AxisDiametr,int NbFacettes);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_TriedronDisplayE9A003B7(IntPtr instance, int APosition,int AColor,double AScale,bool AsWireframe);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_TriedronErase(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_TriedronEcho14CB0F5D(IntPtr instance, int AType);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_GraduatedTrihedronDisplayC3638B35(IntPtr instance, IntPtr xname,IntPtr yname,IntPtr zname,bool xdrawname,bool ydrawname,bool zdrawname,bool xdrawvalues,bool ydrawvalues,bool zdrawvalues,bool drawgrid,bool drawaxes,int nbx,int nby,int nbz,int xoffset,int yoffset,int zoffset,int xaxisoffset,int yaxisoffset,int zaxisoffset,bool xdrawtickmarks,bool ydrawtickmarks,bool zdrawtickmarks,int xtickmarklength,int ytickmarklength,int ztickmarklength,IntPtr gridcolor,IntPtr xnamecolor,IntPtr ynamecolor,IntPtr znamecolor,IntPtr xcolor,IntPtr ycolor,IntPtr zcolor,IntPtr fontOfNames,int styleOfNames,int sizeOfNames,IntPtr fontOfValues,int styleOfValues,int sizeOfValues);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_GraduatedTrihedronErase(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool Visual3d_View_ContainsFacet(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_MinMaxValuesBC7A5786(IntPtr instance, ref double XMin,ref double YMin,ref double ZMin,ref double XMax,ref double YMax,ref double ZMax);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_MinMaxValuesC2777E0C(IntPtr instance, ref double XMin,ref double YMin,ref double XMax,ref double YMax);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_ProjectsBC7A5786(IntPtr instance, double AX,double AY,double AZ,ref double APX,ref double APY,ref double APZ);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr Visual3d_View_ViewMappingDefault(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr Visual3d_View_ViewOrientationDefault(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr Visual3d_View_Window(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_Plot9190F42F(IntPtr instance, IntPtr APlotter);
		[DllImport("NaroOccCore.dll")]
		private static extern bool Visual3d_View_Print3E41AD16(IntPtr instance, IntPtr AnUnderLayer,IntPtr AnOverLayer,IntPtr hPrnDC,bool showBackground,string filename,int printAlgorithm,double theScaleFactor);
		[DllImport("NaroOccCore.dll")]
		private static extern bool Visual3d_View_Print23A2F056(IntPtr instance, IntPtr hPrnDC,bool showBackground,string filename,int printAlgorithm,double theScaleFactor);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_EnableDepthTest461FC46A(IntPtr instance, bool enable);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_EnableGLLight461FC46A(IntPtr instance, bool enable);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_SetBackFacingModel(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int Visual3d_View_BackFacingModel(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_SetAnimationModeOn(IntPtr instance, bool value);
		[DllImport("NaroOccCore.dll")]
		private static extern bool Visual3d_View_AnimationModeIsOn(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool Visual3d_View_DegenerateModeIsOn(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_SetComputedMode(IntPtr instance, bool value);
		[DllImport("NaroOccCore.dll")]
		private static extern bool Visual3d_View_ComputedMode(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_SetBackground(IntPtr instance, IntPtr value);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr Visual3d_View_Background(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool Visual3d_View_IsActive(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool Visual3d_View_IsDefined(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool Visual3d_View_IsDeleted(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int Visual3d_View_NumberOfDisplayedStructures(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_SetViewMapping(IntPtr instance, IntPtr value);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr Visual3d_View_ViewMapping(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_SetViewOrientation(IntPtr instance, IntPtr value);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr Visual3d_View_ViewOrientation(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int Visual3d_View_LightLimit(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int Visual3d_View_PlaneLimit(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr Visual3d_View_ViewManager(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int Visual3d_View_Identification(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr Visual3d_View_GraphicDriver(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_SetTransparency(IntPtr instance, bool value);
		[DllImport("NaroOccCore.dll")]
		private static extern bool Visual3d_View_ZBufferIsActivated(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3d_View_SetZBufferActivity(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr Visual3d_View_UnderLayer(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr Visual3d_View_OverLayer(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool Visual3d_View_IsDepthTestEnabled(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool Visual3d_View_IsGLLightEnabled(IntPtr instance);

		#region NativeInstancePtr Convert constructor

		public Visual3dView() { } 

		public Visual3dView(IntPtr instance) : base(instance) { } 

		protected override void DeleteSelf()
		{ Visual3dView_Dtor(Instance); }

		#endregion

		[DllImport("NaroOccCore.dll")]
		private static extern void Visual3dView_Dtor(IntPtr instance);
	}
}
